added two sections

--- a/Gp/indexOriginal.html
+++ b/Gp/indexOriginal.html
@@ -100,7 +100,7 @@
             <h3 align="left" style="color:white">Relative to</a></h3>
             <h3 align="left" style="color:white">Growth</a></h3>
             <h3 align="left" style="color:white">Investment</a></h3>
-            <h3 align="left"><a href="">(CORGI)</a></h3>
+            <h3 align="left"><a class="nav-link scrollto" href="#team">(CORGI)</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
