--- a/index.html
+++ b/index.html
@@ -81,31 +81,31 @@
             <h3 align="left" style="color:white">Relative to</a></h3>
             <h3 align="left" style="color:white">Growth</a></h3>
             <h3 align="left" style="color:white">Investment</a></h3>
-            <h3 align="left"><a href="">(CORGI)</a></h3>
+            <h3 align="left"><a class="nav-link scrollto" href="#features">(CORGI)</a>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-base-station-fill"></i>
-            <h3><a href="">CyberCorgi</a></h3>
+            <h3><a class="nav-link scrollto" href="#features">CyberCorgi</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-coins-line"></i>
-            <h3><a href="">Crypto Corgi</a></h3>
+            <h3><a class="nav-link scrollto" href="#features">Crypto Corgi</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-draft-line"></i>
-            <h3><a href="">Official Blog</a></h3>
+            <h3><a href="https://medium.com/@CORGICorporation">Official Blog</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-money-dollar-box-line"></i>
-            <h3><a href="">Revenue (nothing)</a></h3>
+            <h3><a class="nav-link scrollto" href="#features">Revenue (nothing)</a></h3>
           </div>
         </div>
       </div>
@@ -155,6 +155,52 @@
       </div>
     </section><!-- End About Section -->
 
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row">
+          <div class="image col-lg-6" style='background-image: url("assets/img/features.jpg");' data-aos="fade-right"></div>
+          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
+            <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-receipt"></i>
+              <h4>Collateral Obligation Relative to Growth Investment (CORGI)</h4>
+              <p>The CORGI is a blanket of toxic loans packaged together so confusingly, government
+                agencies had no choice but to collectively assign it a AAA rating.  No one can make
+                money on a CORGI alone, so the goal is to have everyone buy CORGIs as quickly as possible.
+                This will cause the value to go up, at which point the goal is to unload CORGIs as quickly
+                as possible.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-cube-alt"></i>
+              <h4>CryptoCorgi</h4>
+              <p>There is absolutely no incentive for this company to involve itself with cryptocurrency, other
+                than the fact that it gives us the ability to add the hashtag to our social media.  Seriously, there
+                is no practical reason for us to launch our own cryptocurrency.  But here we are.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-images"></i>
+              <h4>CyberCorgi</h4>
+              <p>CyberCorgi is the only division in our entire company that might actually make products.  One day.
+                Maybe.  For the time being, we are mostly just relying on seed funding we made off of a single 
+                barely functioning demo that we pretended worked better than it actually did.  Investors rejected us, so
+                we resorted to asking random people on the street.  Our entire staff is underpaid, our burndown chart
+                has no burn at all, and at this point we're basically just winging it.</p>
+            </div>
+            <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
+              <i class="bx bx-shield"></i>
+              <h4>Projected Revenue</h4>
+              <p>We have zero customers, zero revenue, and zero daily active users.  We invented nothing, have no patents,and are currently aimed precisely at 0% of the market.  We don't even have business degrees.
+                This company is a massive dumpster fire aboard a train that is not even heading off of a cliff...that 
+                would be too exciting, and would imply the train operates on some sort of fuel and has some sort of
+                engineered mechanism by which it may plummet off the aforementioned cliff.  We are more like a 
+                barely functioning drawing of a tricycle that isn't going anywhere.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Features Section -->
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
@@ -293,6 +339,158 @@
 
       </div>
     </section><!-- End Team Section -->
+    <!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row no-gutters">
+          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100"></div>
+          <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
+            <div class="content d-flex flex-column justify-content-center">
+              <h3>I didn't get paid enough to make this website</h3>
+              <p>
+                Obviously the best thing to do would have been to use a framework myself, but then I kept messing
+                around with the Bootstrap Grid and I could not, for the life of me, figure it out.  I had to resort
+                to adding 1 to try to center stuff, then doing it again, and again and again until I discovered that
+                wasn't the proper way.
+              </p>
+              <div class="row">
+                <div class="col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="count-box">
+                    <i class="bi bi-emoji-smile"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="2" class="purecounter"></span>
+                    <p><strong>Happy Clients</strong> None.  CorgiCorporation has no happy clients</p>
+                  </div>
+                </div>
+
+                <div class="col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="count-box">
+                    <i class="bi bi-journal-richtext"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="2" class="purecounter"></span>
+                    <p><strong>Projects</strong> We are only counting the projects that aren't complete failures</p>
+                  </div>
+                </div>
+
+                <div class="col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="count-box">
+                    <i class="bi bi-clock"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="4" class="purecounter"></span>
+                    <p><strong>Years of experience</strong> Let this all be a sick dream</p>
+                  </div>
+                </div>
+
+                <div class="col-md-6 d-md-flex align-items-md-stretch">
+                  <div class="count-box">
+                    <i class="bi bi-award"></i>
+                    <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="4" class="purecounter"></span>
+                    <p><strong>Awards</strong> lol</p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Counts Section -->
+
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Saul Goodman</h3>
+                <h4>Ceo &amp; Founder</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  My tech company was making a healthy profit, and our tech was working very well.  Then I
+                  randomly opened Reddit to a random page on TechCrunch, which convinced me that I needed
+                  to take a bunch of random technologies I didn't understand or the company would collapse.
+                  That's why I use CORGICorporation.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Sara Wilsson</h3>
+                <h4>Designer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  There I was, a confused and emotionally vulnerably millennial, coming out of college with 
+                  a degree I could not find a job in and roughly $120,000 in student loans.  That's when
+                  my friends told me about CORGICorporation, an unregulated and predatory corporate entity
+                  that sought to exploit my unshakable believe that things would work out so that I could 
+                  either be scammed or scam my friends and family.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Jena Karlis</h3>
+                <h4>Store Owner</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I don't know anything about finance, let alone the stock market, but Google has been 
+                  sending me tons and tons of ads convincing me that I should invest my stimulus check 
+                  in cryptocurrency and options, instead of on groceries and rent.  I am so glad I discovered
+                  CORGICorporation!  Now I can treat this basket of virtual stocks like tinder, and use it to 
+                  light a small fire to keep myself warm in the tiny cardboard box that is now my home.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Matt Brandon</h3>
+                <h4>Freelancer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  The word "cloud" basically just means Internet.  I think.  I really don't know, and
+                  it's way too late to ask, so whenever people get really excited about technology I
+                  just ask them what products they have and then rush to buy the same thing.  I am 
+                  a mindless drone incapable of thinking for myself.  My personality has long since been 
+                  rewritten by the various targeted algorithms that convince me that the cure for my 
+                  profound loneliness and depression is not meaningful relationships or giving back to the
+                  community, it's purchasing wireless earbuds.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>John Larson</h3>
+                <h4>Entrepreneur</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I am an engineer over the age of 30, meaning the other kids at work treat me like some sort
+                  of dinosaur who is incapable of writing modern code because I didn't read article #6 on hackernews
+                  explaining how I would be irrelevant because some new programming paradigm would put everyone who didn't hop on the bandwagon out of work.  Just imagine my excitement when I learned about CyberCorgi,
+                  yet another collection of completely worthless products that we have no need for.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -320,7 +518,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Curg.Corginia@gmail.com</p>
+                <p>Curt.Corginia@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -380,7 +578,7 @@
                 Whatever address it said above <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5555 55455 55<br>
-                <strong>Email:</strong> Curg.Corginia@gmail.com<br>
+                <strong>Email:</strong> Curt.Corginia@gmail.com<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
