--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
             </p>
             <ul>
               <li><i class="ri-questionnaire-fill"></i>Is this a pyramid scheme?</li>
-              <li><i class="ri-check-double-line"></i>We prefer the term "Triangle of Success," but no.  If it were, it would make money</li>
+              <div class = "corginia"><li><i class="ri-check-double-line"></i>We prefer the term "Triangle of Success," but no.  If it were, it would make money</li></div>
               <li><i class="ri-questionnaire-fill"></i>Is this an MLM?</li>
-              <li><i class="ri-check-double-line"></i>Please navigate to https://isthisanmlm.com/ and type in CorgiCorporation.  Checkmate, mlm finder </li>
+              <div class = "corginia"><li><i class="ri-check-double-line"></i>Please navigate to https://isthisanmlm.com/ and type in CorgiCorporation.  Checkmate, mlm finder </li></div>
               <li><i class="ri-questionnaire-fill"></i>What does this have to do with corgis?</li>
-              <li><i class="ri-check-double-line"></i>CORGI is an abbreviation.  I was not aware it was also a type of dog until someone in our HR department brought it up </li>
+              <div class = "corginia"><li><i class="ri-check-double-line"></i>CORGI is an abbreviation.  I was not aware it was also a type of dog until someone in our HR department brought it up </li></div>
               <li><i class="ri-questionnaire-fill"></i>Is this a real company?</li>
-              <li><i class="ri-check-double-line"></i>Yes</li>
+              <div class = "corginia"><li><i class="ri-check-double-line"></i>Yes</li></div>
               <li><i class="ri-questionnaire-fill"></i>Really?</li>
-              <li><i class="ri-check-double-line"></i>No</li>
+              <div class = "corginia"><li><i class="ri-check-double-line"></i>No</li></div>
               
             </ul>
             <p>
@@ -427,7 +427,7 @@
                   There I was, a confused and emotionally vulnerably millennial, coming out of college with 
                   a degree I could not find a job in and roughly $120,000 in student loans.  That's when
                   my friends told me about CORGICorporation, an unregulated and predatory corporate entity
-                  that sought to exploit my unshakable believe that things would work out so that I could 
+                  that sought to exploit my unshakable belief that things would work out so that I could 
                   either be scammed or scam my friends and family.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
